--- a/nextgisweb/gui/nodepkg/modal-portal/ImageView.less
+++ b/nextgisweb/gui/nodepkg/modal-portal/ImageView.less
@@ -1,3 +1,11 @@
+html,
+body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 .preview-image {
     cursor: pointer;
     margin: 4px;
@@ -10,87 +18,84 @@
 .image-portal {
     width: 100%;
     height: 100%;
-    position: absolute;
-    z-index: 1080;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    background-color: rgba(0, 0, 0, 0.45);
 
-    .close-block {
-        right: 16px;
-        display: flex;
-        top: 16px;
-        align-items: center;
-        justify-content: center;
-        position: fixed;
-
-        button {
-            color: rgb(200,200,200);
-            background-color: var(--primary);
-            font-size: 24px;
-            border-radius: 50%;
-
-            &:hover {
-                background-color: var(--primary) !important;
-                color: rgba(255, 255, 255, 1) !important;
-            }
-        }
-    }
-
-    .mask {
-        position: fixed;
-        inset: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.45);
-    }
 
     .image-block {
-        position: fixed;
-        top: 50%;
-        right: auto;
-        bottom: auto;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        outline: 0;
+        display: flex;
+        width: 100%;
+        height: 100%;
+        justify-content: center;
+        align-items: center;
 
-        img {
-            max-height: 90vh;
-            max-width: 90vw;
-            user-select: none;
+        .close {
+            right: 16px;
+            display: flex;
+            top: 16px;
+            align-items: center;
+            justify-content: center;
+            position: fixed;
+
+            button {
+                color: rgb(200, 200, 200);
+                background-color: var(--primary);
+                font-size: 24px;
+                border-radius: 50%;
+
+                &:hover {
+                    background-color: var(--primary) !important;
+                    color: rgba(255, 255, 255, 1) !important;
+                }
+            }
+        }
+
+        .controls {
+            height: 44px;
+            bottom: 0;
+            width: fit-content;
+            position: fixed;
+            background-color: var(--primary);
+            right: 50%;
+            transform: translate(50%, -50%);
+            display: flex;
+            align-items: center;
+            padding: 0px 22px;
+            border-radius: 22px;
+            z-index: 1;
+
+            button {
+                color: rgb(200, 200, 200);
+                font-size: 24px;
+                border-radius: 50%;
+                background: rgba(0, 0, 0, 0) !important;
+
+                &:hover {
+                    background: rgba(0, 0, 0, 0) !important;
+                    color: rgba(255, 255, 255, 1) !important;
+                }
+            }
+
+            .margin-button {
+                margin: 0 0 0 10px;
+            }
+        }
+
+        .content-block {
+            img {
+                overscroll-behavior: contain;
+                max-height: 90vh;
+                max-width: 90vw;
+                user-select: none;
+            }
         }
     }
 
     .size-button {
         width: 42px;
         height: 42px;
-    }
-
-    .controls {
-        height: 44px;
-        bottom: 0;
-        width: fit-content;
-        position: fixed;
-        z-index: 1001;
-        background-color: var(--primary);
-        right: 50%;
-        transform: translate(50%, -50%);
-        display: flex;
-        align-items: center;
-        padding: 0px 22px;
-        border-radius: 22px;
-
-        button {
-            color: rgb(200,200,200);
-            font-size: 24px;
-            border-radius: 50%;
-            background: rgba(0, 0, 0, 0) !important;
-
-            &:hover {
-                background: rgba(0, 0, 0, 0) !important;
-                color: rgba(255, 255, 255, 1) !important;
-            }
-        }
-
-        .margin-button {
-            margin: 0 0 0 10px;
-        }
     }
 }
