--- a/nextgisweb/webmap/nodepkg/display/component/NavigationMenu.less
+++ b/nextgisweb/webmap/nodepkg/display/component/NavigationMenu.less
@@ -1,35 +1,196 @@
-.custom-menu {
-    background-color: var(--primary);
-    color: var(--on-primary-text);
+// .custom-menu {
+//     background-color: var(--primary);
+//     color: var(--on-primary-text);
+
+//     &.vertical {
+//         width: 40px;
+//         display: flex;
+//         flex-direction: column;
+//         height: 100%;
+//         justify-content: space-between;
+//     }
+
+//     &.horizontal {
+//         flex-direction: row;
+//         display: flex;
+//         justify-content: space-between;
+//         width: 100%;
+//         height: 40px;
+//     }
+
+//     .ngw-webmap-display-navigation-menu {
+//         display: flex;
+//         gap: 6px;
+//         background-color: inherit;
+
+//         &.vertical {
+//             flex-direction: column;
+//             padding: 5px 0;
+//         }
+
+//         &.horizontal {
+//             flex-direction: row;
+//         }
+
+//         >.item {
+//             display: flex;
+//             flex-shrink: 0;
+//             justify-content: center;
+//             align-items: center;
+//             cursor: pointer;
+//             user-select: none;
+
+//             &>svg.icon {
+//                 opacity: 0.5;
+//                 font-size: 24px;
+//             }
+
+//             &.active>svg.icon,
+//             &:hover>svg.icon {
+//                 opacity: 1;
+//             }
+//         }
+
+//         &.vertical>.item {
+//             height: 32px;
+//         }
+
+//         &.horizontal>.item {
+//             width: 32px;
+//         }
+
+//     }
+
+
+//     .info-block {
+//         display: flex;
+//         gap: 6px;
+//         background-color: inherit;
+
+//         &.vertical {
+//             flex-direction: column;
+//             padding: 5px 0;
+//         }
+
+//         &.horizontal {
+//             flex-direction: row;
+//             display: flex;
+//             justify-content: flex-end;
+//             padding: 0 5px;
+//         }
+
+//         a {
+//             display: flex;
+//             flex-shrink: 0;
+//             justify-content: center;
+//             align-items: center;
+//             cursor: pointer;
+//             user-select: none;
+
+//             &>svg.icon {
+//                 opacity: 0.5;
+//                 font-size: 24px;
+//                 color: var(--on-primary-text);
+//             }
+
+//             &.active>svg.icon,
+//             &:hover>svg.icon {
+//                 opacity: 1;
+//             }
+//         }
+
+//         &.vertical>a {
+//             height: 32px;
+//         }
+
+//         &.horizontal>a {
+//             width: 32px;
+//         }
+//     }
+// }
+.navigation-menu {
+    display: flex;
 
     &.vertical {
-        width: 40px;
-        display: flex;
         flex-direction: column;
+        width: 40px;
         height: 100%;
-        justify-content: space-between;
     }
 
     &.horizontal {
         flex-direction: row;
-        display: flex;
-        justify-content: space-between;
         width: 100%;
         height: 40px;
+    }
+
+    .info-block {
+        display: flex;
+        gap: 6px;
+        box-sizing: border-box;
+        background-color: var(--primary);
+        padding: 4px;
+        overflow: auto;
+        color: var(--on-primary-text);
+
+        &.vertical {
+            flex-direction: column;
+            width: 40px;
+            height: auto;
+        }
+
+        &.horizontal {
+            flex-direction: row;
+            width: auto;
+            height: 40px;
+        }
+
+        >.item {
+            display: flex;
+            flex-shrink: 0;
+            justify-content: center;
+            align-items: center;
+            cursor: pointer;
+            user-select: none;
+
+            &>svg.icon {
+                opacity: 0.5;
+                font-size: 24px;
+            }
+
+            &:hover>svg.icon {
+                opacity: 1;
+                color: var(--on-primary-text);
+            }
+        }
+
+        &.vertical>.item {
+            height: 32px;
+        }
+
+        &.horizontal>.item {
+            width: 32px;
+        }
     }
 
     .ngw-webmap-display-navigation-menu {
         display: flex;
         gap: 6px;
-        background-color: inherit;
+        box-sizing: border-box;
+        background-color: var(--primary);
+        padding: 4px;
+        overflow: auto;
+        color: var(--on-primary-text);
 
         &.vertical {
             flex-direction: column;
-            padding: 5px 0;
+            width: 40px;
+            height: calc(100% - 116px);
         }
 
         &.horizontal {
             flex-direction: row;
+            width: calc(100% - 116px);
+            height: 40px;
         }
 
         >.item {
@@ -56,54 +217,6 @@
         }
 
         &.horizontal>.item {
-            width: 32px;
-        }
-
-    }
-
-
-    .info-block {
-        display: flex;
-        gap: 6px;
-        background-color: inherit;
-
-        &.vertical {
-            flex-direction: column;
-            padding: 5px 0;
-        }
-
-        &.horizontal {
-            flex-direction: row;
-            display: flex;
-            justify-content: flex-end;
-            padding: 0 5px;
-        }
-
-        a {
-            display: flex;
-            flex-shrink: 0;
-            justify-content: center;
-            align-items: center;
-            cursor: pointer;
-            user-select: none;
-
-            &>svg.icon {
-                opacity: 0.5;
-                font-size: 24px;
-                color: var(--on-primary-text);
-            }
-
-            &.active>svg.icon,
-            &:hover>svg.icon {
-                opacity: 1;
-            }
-        }
-
-        &.vertical>a {
-            height: 32px;
-        }
-
-        &.horizontal>a {
             width: 32px;
         }
     }
