--- a/nextgisweb/webmap/nodepkg/popup/component/Popup.less
+++ b/nextgisweb/webmap/nodepkg/popup/component/Popup.less
@@ -573,3 +573,63 @@
         border-radius: 4px;
     }
 }
+
+// ------------------
+
+.hover-right-disable {
+    width: 0 !important;
+    right: -0 !important;
+}
+
+.hover-left-disable {
+    left: 0 !important;
+    width: 0 !important;
+}
+
+.hover-top-disable {
+    height: 0 !important;
+    top: 0 !important;
+}
+
+.hover-bottom-disable {
+    bottom: 0 !important;
+    height: 0 !important;
+}
+
+.hover-angle-bottom-right-disable {
+    width: 0 !important;
+    height: 0 !important;
+    right: 0 !important;
+    bottom: 0 !important;
+}
+
+.hover-angle-bottom-left-disable {
+    width: 0 !important;
+    height: 0 !important;
+    left: 0 !important;
+    bottom: 0 !important;
+
+    &:hover {
+        background-color: #106a9040;
+        border-radius: 4px;
+    }
+}
+
+.hover-angle-top-left-disable {
+    width: 0 !important;
+    height: 0 !important;
+    left: 0 !important;
+    top: 0 !important;
+
+    &:hover {
+        background-color: #106a9040;
+        border-radius: 4px;
+    }
+}
+
+.hover-angle-top-right-disable {
+    width: 0 !important;
+    height: 0 !important;
+    right: 0 !important;
+    top: 10 !important;
+}
